--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a.button {
 .carousel {
   width: 100%;
   height: 300px;
-  overflow: hidden;
+  overflow: hidden, auto;
   position: relative;
 }
 
@@ -51,14 +51,17 @@ a.button {
 }
 
 .texto-carrusel {
-  font-size: 20px;
+  font-size: 15px;
+  overflow: auto;
+  max-height: none;
 }
 
 .carousel-item {
-  max-height: 600px;
-  max-width: 800px;
+  max-height: 1000px;
+  max-width: 1000px;
 }
 
 .carousel-item p {
     overflow: auto;
+    max-height: none;
   }
