--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   margin: 8px, 8px, 8px, 8px;
 }
 
+img {
+  max-width:500px;
+  max-height:500px;
+}
+
 body {
   background-color: black;
   color: white;
